--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -16,7 +16,7 @@
     <img src="../images/LI-In-Bug.png" alt="LinkedIn logo">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.152538130602!2d-76.13594292336408!3d43.03822197113798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1740861114128!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <form action="" method="post">
+    <form action="https://formspree.io/f/xrbpbkwk" method="post">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name"><br>
 
@@ -38,7 +38,5 @@
 
         <input type="submit" value="submit">
     </form>
-
-    <form action="https://formspree.io/f/xrbpbkwk" method="POST"></form>
 </body>
 </html>
