--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -37,6 +37,17 @@
             display: flex;
             margin-top: 30px;
         }
+        @media (max-width: 768px) {
+            nav a {
+                display: block;
+                width: 100%;
+                padding: 10px 0;
+                text-align: center;
+            }
+            nav span {
+                display: none;
+            }
+        }
     </style>
 </head>
 
