--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -34,8 +34,8 @@
         .part2 {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             margin: 20px;
-            
             padding: 20px;
             background-color: #463f3a;
             border-radius: 10px;
@@ -50,6 +50,17 @@
             border-radius: 10px;
             margin-right: 30px;
         }
+        @media (max-width: 768px) {
+            nav a {
+                display: block;
+                width: 100%;
+                padding: 10px 0;
+                text-align: center;
+            }
+            nav span {
+                display: none;
+            }
+        }
     </style>
 </head>
 
@@ -57,8 +68,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="skills.html">Skills</a>
+        <a href="index.html">Home</a><span>|</span>
+        <a href="skills.html">Skills</a><span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
     
@@ -102,9 +113,7 @@
             <input type="submit" value="submit">
         </form>
         </div>
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.152538130602!2d-76.13594292336408!3d43.03822197113798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1740861114128!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.152538130602!2d-76.13594292336408!3d43.03822197113798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39fca155555%3A0xc1c69e4f641652c1!2sSyracuse%20University%20School%20of%20Information%20Studies%20(iSchool)!5e0!3m2!1sen!2sus!4v1740861114128!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>     
 </body>
 </html>
