--- a/lab10/index.html
+++ b/lab10/index.html
@@ -30,6 +30,10 @@
             nav span {
                 display: none;
             }
+            footer {
+                padding: 10px;
+                text-align: center;
+            }
         }
 </style>
 
