--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -18,16 +18,17 @@
         .skills {
             display: flex;
             gap: 2px;
-            margin-right: 300px;
             flex: 3;
         }
         .skill-item {
+            font-size: 1.2rem;
+            margin-top: 8px;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 8px; 
         }
-        .extra-skills,h2 {
+        .extra-skills {
             background-color: #ffc2d1;
             color: black;
             border-radius: 10px;
@@ -35,10 +36,17 @@
             width: 300px;
             margin-right: 60px;
         }
+        .extra-skills h2 {
+            color: black; 
+            text-align: center;
+        }
         .flexbox2 {
             display: flex;
+            justify-content: center; 
+            align-items: flex-start; 
             margin-top: 30px;
         }
+
         @media (max-width: 768px) {
             nav a {
                 display: block;
