--- a/project5/index.html
+++ b/project5/index.html
@@ -14,16 +14,16 @@
         </nav>
     </header>
     <h1>Luxury Fashion</h1>
-    <img src="../project/media/karly-jones-ccCunZuiJNk-unsplash.jpg" alt="chanel-collage">
+    <img src="../project/media/karly-jones-ccCunZuiJNk-unsplash.jpg" alt="chanel01">
 
     <main>
         <section>
-            <h2>Welcom to Luxury Fashion!</h2>
+            <h2>Welcome to Luxury Fashion!</h2>
             <p>Where timeless elegance meets modern sophistication. Luxury fashion represents more than just clothing—it embodies craftsmanship, exclusivity, and artistic expression.</p>
         </section>
         <section>
             <h3>Explore the Evolution</h3>
-            <p>Explore the evolution of luxury fashion through a curated collection of iconicpieces that have shaped the industry. From the classic Chanel tweed suit to the revolutionary designs of Alexander McQueen, lusuxry fashion continues to redfine style and innovation.</p>
+            <p>Explore the evolution of luxury fashion through a curated collection of iconicpieces that have shaped the industry. From the classic Chanel tweed suit to the revolutionary designs of Alexander McQueen, luxury fashion continues to redfine style and innovation.</p>
         </section>
         <section>
             <h3>What You'll Find on this Site</h3>
@@ -33,34 +33,32 @@
                 <li>Styling tips to incorporate luxury fashion into your wardrobe.</li>
             </ul>
         </section>
-        <section>
+        <div>
             <p><strong>Discrover the world of high fashion, then make it your very own!</strong></p>
-        </section>
-        <section>
-            <div class="slideshow">
-                <figure>
-                    <img src="../project/media/beach model.jpg" alt="beach-runway">
-                </figure>
-                <figure>
-                    <img src="../project/media/louis-v headband.jpg" alt="lv-headband">
-                </figure>
-                <figure>
-                    <img src="../project/media/dior.jpg" alt="dior-ring">
-                </figure>
-                <figure>
-                    <img src="../project/media/gucci building.jpg" alt="gucci-logo">
-                </figure>
-                <figure>
-                    <img src="../project/media/gucci sneakers.jpg" alt="gucci-sneaker">
-                </figure>
-                <figure>
-                    <img src="../project/media/iconic chanel.jpg" alt="chanel-outfit">
-                </figure>
-                <figure>
-                    <img src="../project/media/lux-suitcase.jpg" alt="chanel-suitcase">
-                </figure>
-            </div>
-        </section>
+        </div>
+        <div class="slideshow">
+            <figure>
+                <img src="../project/media/beachmodel.jpg" alt="beach-runway">
+            </figure>
+            <figure>
+                <img src="../project/media/lv-headband.jpg" alt="lv-headband">
+            </figure>
+            <figure>
+                <img src="../project/media/dior.jpg" alt="dior-ring">
+            </figure>
+            <figure>
+                <img src="../project/media/guccibuilding.jpg" alt="gucci-logo">
+            </figure>
+            <figure>
+                <img src="../project/media/guccisneaker.jpg" alt="gucci-sneaker">
+            </figure>
+            <figure>
+                <img src="../project/media/iconicchanel.jpg" alt="chanel-outfit">
+            </figure>
+            <figure>
+                <img src="../project/media/lux-suitcase.jpg" alt="chanel-suitcase">
+            </figure>
+        </div>
     </main>
 
     <footer>
