--- a/project5/legacy.html
+++ b/project5/legacy.html
@@ -20,8 +20,8 @@
             <h1>Legacy of Luxury</h1>
             <p>Exploring fashion houses and their timeless influence.</p>
         </section>
-        <img src="../project/media/louis-v trunk.jpg" alt="lv-trunk">
-        <img src="../project/media/gucci runway.jpg" alt="gucci-rw">
+        <img src="../project/media/lv-trunk.jpg" alt="lv-trunk">
+        <img src="../project/media/guccirunway.jpg" alt="gucci-rw">
         <section>
             <article>
                 <h3>Chanel: Reinventing Elegance</h3>
@@ -37,15 +37,14 @@
             </article>
         </section>
         <section>
+            <h5>Continuing Influence</h5>
             <p>These brands, among others, have redefined luxury fashion and continue to influence designers, celebrities, and fashion lovers worldwide.</p>
         </section>
-        <section>
-            <div class="collage">
-                <img src="../project/media/chanel no'5.jpg" alt="perfume">
-                <img src="../project/media/gucci-page two.jpg" alt="purse">
-                <img src="../project/media/louis-v logo.jpg" alt="logo">
-                <img src="../project/media/louis-v bag.jpg" alt="bag">
-            </div>
+        <section class="collage">
+            <img src="../project/media/chanel-no'5.jpg" alt="perfume">
+            <img src="../project/media/guccipurse.jpg" alt="purse">
+            <img src="../project/media/lv-logo.jpg" alt="logo">
+            <img src="../project/media/lv-bag.jpg" alt="bag">
         </section>
     </main>
 
