--- a/project5/styling.html
+++ b/project5/styling.html
@@ -15,13 +15,14 @@
     </header>
     <h1>Luxury Fashion</h1>
     
-    <img src="../project/media/styled outfits.png">
+    <img src="../project/media/collage.png">
     <main>
         <section>
             <h2>Styling Luxury: Making Fashion Accessible</h2>
             <p>Luxury fashion is often perceived as unattainable, but with the right approach, anyone can incorporate elements of high fashion into their personal style. Here's how:</p>
         </section>
         <section>
+            <h2>Luxury Style Tips</h2>
             <article>
                 <h4>1. Invest in Timeless Pieces</h4>
                 <p>Quality over quantity! A classic designer handbag, a tailored blazer, or a well-crafted pair of shoes can elevate any outfit and last for years.</p>
