--- a/project5/legacy.html
+++ b/project5/legacy.html
@@ -17,12 +17,13 @@
 
     <main>
         <section>
-            <h1>Legacy of Luxury</h1>
+            <h2>Legacy of Luxury</h2>
             <p>Exploring fashion houses and their timeless influence.</p>
         </section>
         <img src="../project/media/lv-trunk.jpg" alt="lv-trunk">
         <img src="../project/media/guccirunway.jpg" alt="gucci-rw">
         <section>
+            <h2>Fashion House Histories</h2>
             <article>
                 <h3>Chanel: Reinventing Elegance</h3>
                 <p>Founded by Coco Chanel in 1910, Chanel revolutionized women’s fashion with the introduction of the little black dress, the Chanel No. 5 perfume, and the iconic quilted handbag. Chanel remains a symbol of effortless elegance.</p>
