--- a/project5/styling.html
+++ b/project5/styling.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
     </header>
     <h1>Luxury Fashion</h1>
     
-    <img src="../project/media/collage.png">
+    <img src="../project/media/collage.png" alt="outfitcollage">
     <main>
         <section>
             <h2>Styling Luxury: Making Fashion Accessible</h2>
