--- a/project5/legacy.html
+++ b/project5/legacy.html
@@ -41,12 +41,12 @@
             <h5>Continuing Influence</h5>
             <p>These brands, among others, have redefined luxury fashion and continue to influence designers, celebrities, and fashion lovers worldwide.</p>
         </section>
-        <section class="collage">
+        <div class="collage">
             <img src="../project/media/chanel-no'5.jpg" alt="perfume">
             <img src="../project/media/guccipurse.jpg" alt="purse">
             <img src="../project/media/lv-logo.jpg" alt="logo">
             <img src="../project/media/lv-bag.jpg" alt="bag">
-        </section>
+        </div>
     </main>
 
     <footer>
