--- a/project5/styling.html
+++ b/project5/styling.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>The Art of Luxury</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,40 +18,44 @@
             <a href="styling.html">Styling Luxury: Making Fashion Accessible</a>
         </nav>
     </header>
-    <h1>Luxury Fashion</h1>
+    <h1>Making Luxury Yours</h1>
     
-    <img src="../project/media/collage.png" alt="outfitcollage">
     <main>
         <section>
             <h2>Styling Luxury: Making Fashion Accessible</h2>
             <p>Luxury fashion is often perceived as unattainable, but with the right approach, anyone can incorporate elements of high fashion into their personal style. Here's how:</p>
         </section>
-        <section>
-            <h2>Luxury Style Tips</h2>
-            <article>
-                <h4>1. Invest in Timeless Pieces</h4>
-                <p>Quality over quantity! A classic designer handbag, a tailored blazer, or a well-crafted pair of shoes can elevate any outfit and last for years.</p>
-            </article>
-            <article>
-                <h4>2. Mix High and Low Fashion</h4>
-                <p>Pair a designer accessory with a more affordable outfit. A statement Gucci belt or Louis Vuitton scarf can instantly make a simple outfit look high-end.</p>
-            </article>
-            <article>
-                <h4>3. Shop Pre-Owned & Vintage</h4>
-                <p>Luxury consignment stores and online platformes like <a href="https://www.rebag.com/" target="_blank">REBAG+</a>, <a href="https://reluxefashion.com" target="_blank">RELUXEFASHION</a>, <a href="https://season2consign.com" target="_blank">SEASON 2</a>, offer authentic designer pieces at a fraction of the price.</p>
-            </article>
-            <article>
-                <h4>4. Focus on Fit & Fabric</h4>
-                <p>Each luxury brand has a signature aesthetic; whether it's Chanel's tweed, Burberry's trnech coat, or Dior's feminine silhouettes. Find inspiration from these elements and intergrate them into your wardrobe.</p>
-            </article>
+        <div class="two-columns">
+            <section class="text">
+                <h2>Luxury Style Tips</h2>
+                <article>
+                    <h4>1. Invest in Timeless Pieces</h4>
+                    <p>Quality over quantity! A classic designer handbag, a tailored blazer, or a well-crafted pair of shoes can elevate any outfit and last for years.</p>
+                </article>
+                <article>
+                    <h4>2. Mix High and Low Fashion</h4>
+                    <p>Pair a designer accessory with a more affordable outfit. A statement Gucci belt or Louis Vuitton scarf can instantly make a simple outfit look high-end.</p>
+                </article>
+                <article>
+                    <h4>3. Shop Pre-Owned & Vintage</h4>
+                    <p>Luxury consignment stores and online platformes like <a href="https://www.rebag.com/" target="_blank">REBAG+</a>, <a href="https://reluxefashion.com" target="_blank">RELUXEFASHION</a>, <a href="https://season2consign.com" target="_blank">SEASON 2</a>, offer authentic designer pieces at a fraction of the price.</p>
+                </article>
+                <article>
+                    <h4>4. Focus on Fit & Fabric</h4>
+                    <p>Each luxury brand has a signature aesthetic; whether it's Chanel's tweed, Burberry's trnech coat, or Dior's feminine silhouettes. Find inspiration from these elements and intergrate them into your wardrobe.</p>
+                </article>
+            </section>
 
-            <p>Luxury fashion isn't just for the runway; it's a way to express your personal style and confidence in everyday life. With these tips, you can make high fashion a part of your wardrobe withotu breaking the bank.</p>
-        </section>
+            <div class="ending">
+                <img src="../project/media/collage.png" alt="outfitcollage" class="collage-image">
+                <p class="ending">Luxury fashion isn't just for the runway; it's a way to express your personal style and confidence in everyday life. With these tips, you can make high fashion a part of your wardrobe withotu breaking the bank.</p>
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>&copy; 2025 yaneeka nichols</p>
-        <p>"Fashion fades, style is eternal." - Yves Saint Laurent</p>
+        <p class="quote">"Fashion fades, style is eternal." - Yves Saint Laurent</p>
     </footer>
 </body>
 </html>
