--- a/project5/legacy.html
+++ b/project5/legacy.html
@@ -31,6 +31,22 @@
             transform: translate(-30%, -30%); /* Fine-tune positioning */
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
         }
+
+        @media (max-width: 768px) {
+                nav a {
+                    display: block;
+                    width: 100%;
+                    padding: 10px 0;
+                    text-align: center;
+                }
+                nav span {
+                    display: none;
+                }
+                footer {
+                    padding: 10px;
+                    text-align: center;
+                }
+            }
     </style>
 </head>
 <body>
@@ -40,6 +56,7 @@
             <a href="legacy.html">The Legacy of Luxury Brands</a><span> |</span>
             <a href="styling.html">Styling Luxury: Making Fashion Accessible</a>
         </nav>
+        <a href="#main" class="skip">Skip to main content</a>
     </header>
     <h1>The Legacy of Luxury Brands</h1>
 
