--- a/project5/styling.html
+++ b/project5/styling.html
@@ -9,6 +9,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Imperial+Script&family=Lavishly+Yours&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Tuffy:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    
+    <style>
+        @media (max-width: 768px) {
+                nav a {
+                    display: block;
+                    width: 100%;
+                    padding: 10px 0;
+                    text-align: center;
+                }
+                nav span {
+                    display: none;
+                }
+                footer {
+                    padding: 10px;
+                    text-align: center;
+                }
+            }
+    </style>
 </head>
 <body>
     <header>
@@ -17,6 +35,7 @@
             <a href="legacy.html">The Legacy of Luxury Brands</a><span> |</span>
             <a href="styling.html">Styling Luxury: Making Fashion Accessible</a>
         </nav>
+        <a href="#main" class="skip">Skip to main content</a>
     </header>
     <h1>Making Luxury Yours</h1>
     
