--- a/project5/index.html
+++ b/project5/index.html
@@ -72,7 +72,7 @@
     <h1>Luxury Fashion</h1>
     
 
-    <main>
+    <main id="main">
         <div class="information">
             <img src="../project/media/makeup.jpg" alt="chanel01" class="chanel">
             <div class="welcome">
