--- a/project5/legacy.html
+++ b/project5/legacy.html
@@ -60,7 +60,7 @@
     </header>
     <h1>The Legacy of Luxury Brands</h1>
 
-    <main>
+    <main id="main">
         <section class="info01">
             <h2>Legacy of Luxury</h2>
             <p>Luxury fashion houses have stood the test of time, evolving with the changing tides of culture and trends while maintaining their commitment to quality and innovation</p>
