--- a/project5/styling.html
+++ b/project5/styling.html
@@ -39,7 +39,7 @@
     </header>
     <h1>Making Luxury Yours</h1>
     
-    <main>
+    <main id="main">
         <section>
             <h2>Styling Luxury: Making Fashion Accessible</h2>
             <p>Luxury fashion is often perceived as unattainable, but with the right approach, anyone can incorporate elements of high fashion into their personal style. Here's how:</p>
